# WeNoChat

./: README.md  模块分析.md  通讯协议.xmind
Client/: Client.pro  constants.cpp  messagerecord.cpp  uires.qrc
Client/UI/: basewidget.h  chatmessagewidget.h  friendlist.cpp  group.h  group.ui  login.cpp  login.h  mainwindow.h  mainwindow.ui  mydelegate.cpp  mydelegate.h  password.h  question.cpp  question.h  regist.h  regist.ui  screencut.cpp  searchfriends.cpp  searchfriends.h  searchfriends.ui  ui_windows.cpp  user.cpp  user.h  user.ui  viewfullmessage.cpp  viewfullmessage.h  viewfullmessage.ui
Client/assets/: constants.h  main.cpp  messagerecord.h
Client/assets/UI/: basewidget.cpp  chatmessagewidget.cpp  friendlist.h  group.cpp  login.ui  mainwindow.cpp  netset.cpp  netset.h  netset.ui  password.cpp  password.ui  picturecut.cpp  picturecut.h  picturecut.ui  question.ui  regist.cpp  screencut.h  screencut.ui  ui_windows.h
Client/assets/socket/: basesock.h  datasock.cpp  datasock.h  filesock.h  (+1 more)
Client/socket/: basesock.cpp  cmd.cpp  cmd.h  filesock.cpp  sockinfo.cpp
Client/utils/: resourcemanager.cpp  resourcemanager.h  tools.cpp
Server/: CMakeLists.txt  README.md  build.sh  env.sh  reset  run.sh
Server/res/database/: info.db
Server/src/: main.cpp
Server/src/Database/: sql++.cpp
Server/src/Server/: CmdHandler.cpp  Server.cpp
Server/src/Tools/: Constants.cpp  File.cpp  Tools.cpp
Server/src/include/: CmdHandler.h  Constants.h  File.h  Json.h  Record.h  Server.h  Tools.h  sql++.h
Server/src/json/: Json.cpp
Server/test/: testByte2Int  testByte2Int.cpp
(+3 files in other folders)
